[package]
name = "clique-collector"
version = "0.1.0"
edition = "2018"
authors = ["Artemis <artemis@artemisdev.xyz>"]
description = "A service which connects to Discord and stores message metadata in a database."
readme = "README.md"
repository = "https://github.com/clique-discord/collector"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"]}
configparser = { version = "2.1" }

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "rustls_backend", "model"]
version = "0.10"
